# autoio

./: .gitignore  .pylintrc  README.md  lint.sh  log  pyproject.toml  recipe.yaml
.circleci/: config.yml
.github/workflows/: build.yaml  test.yaml
.recipe/: recipe.yaml
autoio-base/: environment.yml  meta.yaml  pyproject.toml  setup.cfg  setup.py
autoio-base/autoparse/: _conv.py  _lib.py  _more_patterns.py  find.py  pattern.py
autoio-base/autoparse/tests/: test_find.py
autoio-base/autoread/_zmat/: setval.py
autoio-base/autowrite/: _mat.py  geom.py
autoio-base/ioformat/: __init__.py  _format.py  pathtools.py  ptt.py
autoio-base/ioformat/tests/: test_ptt.py
autoio-interfaces/: environment.yml  meta.yaml  pylog  setup.py
autoio-interfaces/autorun/: __init__.py  _multiprog.py  _proc.py  _run.py  _script.py  intder.py  mess.py  nst.py  onedmin.py  pac99.py  projrot.py  varecof.py
autoio-interfaces/autorun/tests/: _varecof.py  nst.out  test_intder.py  test_mess.py  test_multiprog.py  test_nst.py  test_proc.py
autoio-interfaces/chemkin_io/parser/: __init__.py  mechanism.py  reaction.py  thermo.py
autoio-interfaces/chemkin_io/tests/: test__comments.py  test__pesgroups_write.py  test__reactions_read.py  test__reactions_write.py  test__species_read.py  test__species_write.py  test__therm_read.py  test__transport_write.py
autoio-interfaces/chemkin_io/writer/: __init__.py  _util.py  comments.py  mechanism.py  pesgroups.py  rdct.py  reaction.py  spc.py  thermo.py  transport.py
autoio-interfaces/elstruct/: option.py  par.py  util.py
autoio-interfaces/elstruct/reader/: _reader.py  program_modules.py
autoio-interfaces/elstruct/tests/: test__pipeline.py  test__reader_programs.py  test__writer_programs.py
autoio-interfaces/elstruct/writer/: _writer.py  fill.py  program_modules.py
autoio-interfaces/intder_io/: __init__.py  _format.py  _util.py  reader.py  writer.py
autoio-interfaces/intder_io/templates/: header.mako
autoio-interfaces/intder_io/tests/: _write.py  test_reader.py  test_writer.py
autoio-interfaces/mess_io/: __init__.py  _wellextend.py
autoio-interfaces/mess_io/reader/: .rates.py.swp  __init__.py  _label.py  _mess_keys.py  _nonboltz.py  _pes.py  _wells.py  hoten.py  inp.py  new_rates.py  ped.py  rates.py  rates_new.py  rates_old.py  tors.py
autoio-interfaces/mess_io/tests/: test_read_hoten.py  test_read_ped.py  test_read_pes.py  test_read_pf.py  test_read_rates.py  test_read_wells.py  test_write_etrans.py  test_write_glob.py  test_write_montecarlo.py  test_write_rxnchan.py
autoio-interfaces/mess_io/writer/: __init__.py  _etrans.py  _format.py  _glob.py  _mol_inf.py  _monte_carlo.py  _rxnchan.py
autoio-interfaces/nst_io/: __init__.py  _format.py  writer.py
autoio-interfaces/nst_io/tests/: test__nst_write.py  test_reader.py  test_writer.py
autoio-interfaces/onedmin_io/: writer.py
autoio-interfaces/pac99_io/: _convert.py
autoio-interfaces/polyrate_io/: _util.py
autoio-interfaces/projrot_io/: writer.py
autoio-interfaces/projrot_io/tests/: test_proj_read.py
autoio-interfaces/thermp_io/: reader.py
autoio-interfaces/thermp_io/tests/: test_thermp_read.py
autoio-interfaces/varecof_io/reader/: divsur.py
autoio-interfaces/varecof_io/tests/: test_prep.py  test_varecof_read.py
autoio-interfaces/varecof_io/writer/: __init__.py  _format.py  _prep.py  corr_potentials.py  input_file.py  util.py
autoparse/: _lib.py  _more_patterns.py  _pattern.py  pattern.py
autoparse/tests/: test_pattern.py
autoread/: energy.py  matrix.py
autoread/tests/: test_zmat.py
autorun/: __init__.py  _multiprog.py  _proc.py  _run.py  _script.py  _script_bvs.py  ase.py  pac99.py  polyrate.py  projrot.py  thermp.py  varecof.py
autorun/tests/: _intder.py  _nst.py  _varecof.py  test_mess.py  test_multiprog.py
autorun/tests/data/: ts.zmat  ts2.hess  ts2.zmat
chemkin_io/parser/: mechanism.py  reaction.py  thermo.py
chemkin_io/tests/: test__comments.py  test__mechanism_write_read.py  test__pesgroups_write.py  test__reactions_read.py  test__reactions_replace.py  test__reactions_write.py  test__species_read.py  test__species_write.py  test__therm_write.py
chemkin_io/writer/: _util.py  comments.py  mechanism.py  pesgroups.py  reaction.py  spc.py
elstruct/: __init__.py  par.py  run.py
elstruct/reader/: __init__.py  _reader.py  program_modules.py
elstruct/reader/_ase/: __init__.py  energ.py  status.py  version.py
elstruct/reader/_cfour2/: surface.py
elstruct/reader/_gaussian09/: __init__.py  _vpt2.py  energ.py  status.py
elstruct/reader/_gaussian16/: __init__.py  _vpt2.py  energ.py
elstruct/reader/_molpro2015/: __init__.py  energ.py
elstruct/reader/_mrcc2018/: status.py
elstruct/reader/_nwchem6/: energ.py  surface.py
elstruct/reader/_orca4/: energ.py  status.py  (+1 more)
elstruct/tests/: test__inpzma_reader.py  test__pipeline.py
elstruct/writer/: _writer.py  fill.py  program_modules.py
intder_io/: __init__.py  reader.py
intder_io/templates/: header.mako
ioformat/: _string.py  ptt.py
mess_io/: __init__.py  _wellextend.py
mess_io/reader/: __init__.py  _label.py  _nonboltz.py  _pes.py  _wells.py  bf.py  hoten.py  new_rates.py  ped.py  rates.py
mess_io/tests/: new_test_read_rates.py  test_read_bf.py  test_read_hoten.py  test_read_label.py  test_read_ped.py  test_read_pes.py  test_read_pf.py  test_read_rates.py  test_read_tors.py  test_read_wells.py  test_wellextend.py  test_write_etrans.py  test_write_glob.py  test_write_lump.py  test_write_molinf.py  test_write_montecarlo.py  test_write_rxnchan.py  test_write_spc.py  try_reader.py
mess_io/writer/: __init__.py  _format.py  _mol_inf.py  _monte_carlo.py  _spc.py
nst_io/: reader.py  writer.py
nst_io/templates/: input.mako
onedmin_io/: writer.py
pac99_io/: _convert.py
pac99_io/tests/: test_pac99.py
projrot_io/: reader.py  util.py  writer.py
projrot_io/tests/: test_proj_write.py
thermp_io/: writer.py
thermp_io/tests/: test_thermp_read.py
varecof_io/tests/: _makezma.py  test_prep.py
varecof_io/writer/: __init__.py  _prep.py  corr_potentials.py  input_file.py
(+215 files in other folders)
