[project]
name = "autoio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Copan", email = "avcopan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mako",
    "more-itertools",
    "numpy",
    "pint",
    "pyparsing",
    "pyyaml",
    "qcelemental",
]

[project.scripts]
autoio = "autoio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "autoparse",
    "autoread",
    "autorun",
    "autowrite",
    "chemkin_io",
    "elstruct",
    "intder_io",
    "ioformat",
    "mess_io",
    "nst_io",
    "onedmin_io",
    "pac99_io",
    "polyrate_io",
    "projrot_io",
    "thermp_io",
    "varecof_io",
]

[tool.hatch.build.targets.wheel]
include = [
    "autoparse",
    "autoread",
    "autorun",
    "autowrite",
    "chemkin_io",
    "elstruct",
    "intder_io",
    "ioformat",
    "mess_io",
    "nst_io",
    "onedmin_io",
    "pac99_io",
    "polyrate_io",
    "projrot_io",
    "thermp_io",
    "varecof_io",
]

[dependency-groups]
dev = [
    "pytest",
]
