[project]
name = "autoio"
version = "2025.7.28"
description = "I/O interfaces for external codes used by AutoMech"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mako",
    "more-itertools",
    "numpy",
    "pint",
    "pyparsing",
    "pyyaml",
    "qcelemental",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "autoparse",
    "autoread",
    "autorun",
    "autowrite",
    "chemkin_io",
    "elstruct",
    "intder_io",
    "ioformat",
    "mess_io",
    "nst_io",
    "onedmin_io",
    "pac99_io",
    "polyrate_io",
    "projrot_io",
    "thermp_io",
    "varecof_io",
]

[tool.hatch.build.targets.wheel]
include = [
    "autoparse",
    "autoread",
    "autorun",
    "autowrite",
    "chemkin_io",
    "elstruct",
    "intder_io",
    "ioformat",
    "mess_io",
    "nst_io",
    "onedmin_io",
    "pac99_io",
    "polyrate_io",
    "projrot_io",
    "thermp_io",
    "varecof_io",
]

[dependency-groups]
dev = [
    "pytest",
]
