[project]
name = "autoio"
version = "2025.10.0"
description = "I/O interfaces for external codes used by AutoMech"
readme = "README.md"
dependencies = []
requires-python = ">= 3.11"

[dependency-groups]
test = ["pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# Hatchling configurations
[tool.hatch.build.targets.sdist]
include = [
    "autoparse",
    "autoread",
    "autorun",
    "autowrite",
    "chemkin_io",
    "elstruct",
    "intder_io",
    "ioformat",
    "mess_io",
    "nst_io",
    "onedmin_io",
    "pac99_io",
    "polyrate_io",
    "projrot_io",
    "thermp_io",
    "varecof_io",
]

[tool.hatch.build.targets.wheel]
include = [
    "autoparse",
    "autoread",
    "autorun",
    "autowrite",
    "chemkin_io",
    "elstruct",
    "intder_io",
    "ioformat",
    "mess_io",
    "nst_io",
    "onedmin_io",
    "pac99_io",
    "polyrate_io",
    "projrot_io",
    "thermp_io",
    "varecof_io",
]

# Pixi configurations
[tool.pixi.workspace]
channels = ["conda-forge", "Auto-Mech"]
platforms = ["linux-64"]
preview = ["pixi-build"]

#   - Build
[tool.pixi.package] 
name = "autoio"

[tool.pixi.package.build] 
backend = { name = "pixi-build-python", version = "==0.3.2" }

[tool.pixi.package.host-dependencies] 
hatchling = "==1.26.3"

[tool.pixi.package.run-dependencies] 
mako = ">=1.3.10"
more-itertools = ">=10.8.0"
numpy = ">=1.26"
pint = ">=0.25"
pyparsing = ">=3.2.5"
pyyaml = ">=6.0.3"
qcelemental = ">=0.29.0"
autochem = ">=2025.10.0"

#   - Other
[tool.pixi.pypi-dependencies]
autoio = { path = ".", editable = true }

[tool.pixi.dependencies]
mako = ">=1.3.10"
more-itertools = ">=10.8.0"
numpy = ">=1.26"
pint = ">=0.25"
pyparsing = ">=3.2.5"
pyyaml = ">=6.0.3"
qcelemental = ">=0.29.0"
autochem = ">=2025.10.0"

[tool.pixi.feature.build.dependencies]
rattler-build = ">=0.47.1"

[tool.pixi.environments]
test = ["test"]
build = ["build"]
dev = ["test", "build"]

[tool.pixi.feature.test.tasks]
test-mess_io = "pytest -v mess_io"
test-autoparse = "pytest -v autoparse"
test-autoread = "pytest -v autoread"
test-autowrite = "pytest -v autowrite"
test-ioformat = "pytest -v ioformat"
test-chemkin_io = "pytest -v chemkin_io"
test-projrot_io = "pytest -v projrot_io"
test-polyrate_io = "pytest -v polyrate_io"
test-thermp_io = "pytest -v thermp_io"
test-onedmin_io = "pytest -v onedmin_io"
# Broken
test-pac99_io = "pytest -v pac99_io"
test-varecof_io = "pytest -v varecof_io"
test-autorun = "pytest -v autorun"
test-elstruct = "pytest -v elstruct"

[tool.pixi.feature.test.tasks.test-working]
depends-on = [
    "test-mess_io",
    "test-autoparse",
    "test-autoread",
    "test-autowrite",
    "test-ioformat",
    "test-chemkin_io",
    "test-projrot_io",
    "test-polyrate_io",
    "test-thermp_io",
    "test-onedmin_io",
]

[tool.pixi.feature.test.tasks.test]
depends-on = [
    "test-mess_io",
    "test-autoparse",
    "test-autoread",
    "test-autowrite",
    "test-ioformat",
    "test-chemkin_io",
    "test-projrot_io",
    "test-polyrate_io",
    "test-thermp_io",
    "test-onedmin_io",
    # Broken
    "test-pac99_io",
    "test-varecof_io",
    "test-autorun",
    "test-elstruct",
]

[tool.pixi.feature.build.tasks]
upload = "rattler-build upload anaconda -o Auto-Mech *.conda"
