[metadata]
name = autoio-base
version = 0.10.1
[options]
packages = find:
install_requires =
    numpy
    scipy
    more-itertools
    pyyaml
    mako
    pytest
    pytest
    pytest-cov
    future
    flake8
    pylint
    qcelemental == 0.25.1
    pint == 0.18
    importlib-metadata; python_version>"3.8"
[options.packages.find]
where=.
